# ecCGL1

./: .gitignore  01_model_calibration.ipynb  02_construct_ecCGL1.ipynb  README.md  pyproject.toml
_cache/sabio_rk_total/: 2_3_1_31.json
iCW773_get_data/: kcat_database_brenda.json  kcat_database_brenda_for_model.json
model/: iCW773_uniprot.json  iCW773_uniprot.xml  iCW773_uniprot_modification.json  iCW773_uniprot_modification.xml  iCW773_uniprot_modification_del.json  iCW773_uniprot_modification_del.xml
src/eccgl1/: AutoPACMEN_function.py  ECMpy_function.py
